- Dropped about copy in footer for now. - Made index header slightly smaller and lighter. - Made code style slightly smaller. - Lightened visited links. - Fixed archive item spacing.

--- a/contents/css/main.css
+++ b/contents/css/main.css
@@ -5,7 +5,7 @@ h1, h2, h3, h4, h5, h6, p, body, a, img, ul, ol, blockquote, pre {
 
 body {
   font-family: adobe-garamond-pro, garamond, serif;
-  font-size: 30px;
+  font-size: 28px;
   line-height: 1.52;
   background-color: #fcfcfc;
   text-rendering: optimizeLegibility;
@@ -36,7 +36,7 @@ a:link {
 }
 
 a:visited {
-  color: hsla(132, 0%, 30%, 1);
+  color: hsl(0, 0%, 38%);
   font-weight: normal;
 }
 
@@ -99,11 +99,11 @@ hr {
 /* page header */
 
 .header {
-  margin: 3em 0 5em;
+  margin: 3em 0 4em;
 }
 
 .header h1 {
-  font-size: 2.6em;
+  font-size: 2em;
   text-align: center;
   font-weight: 700;
   margin: 0;
@@ -111,7 +111,7 @@ hr {
 
 .header a, .header a:hover {
   text-decoration: none;
-  color: #171717;
+  color: #333;
 }
 
 .header .author {
@@ -307,14 +307,14 @@ footer .copy, footer .copy a {
 }
 
 .archive ul li {
-  margin: 0;
+  margin: 1em 0 0 0;
 }
 
 /* code styling */
 
 code {
   font-family: 'Lucida Console', 'Anonymous Pro', monospace;
-  font-size: 0.85em;
+  font-size: 0.75em;
   color: #000;
 }
 
@@ -392,6 +392,11 @@ code.lang-markdown .bullet {
 
 ol.alpha { 
   list-style-type: upper-alpha; 
+}
+
+.triforce {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 /* media queries */
